Added files via upload

--- a/lab2.html
+++ b/lab2.html
@@ -14,9 +14,9 @@
 		<fieldset>
 			<legend><b>Контактная информация</b></legend>
 			<!--Имя может быть длиной от 2 до 15 символов, русскими буквами-->
-			<label for="name">Имя </label><input type="text" name="name" pattern="[А-Яа-яЁё]{2,15}" placeholder="Введите ваше имя">
+			<label for="name">Имя </label><input type="text" name="name" pattern="[А-Яа-я]{2,15}" placeholder="Введите ваше имя">
 			<!--Почта должна быть написана английскими буквами, а по середине иметь знак "собака"-->
-			<label for="email">E-mail<em>* </em></label><input type="email" name="email" pattern="\S+@[a-z]+.+[a-z]+" placeholder="mail@mail.com" required>
+			<label for="email">E-mail<em>* </em></label><input type="email" name="email" pattern="[a-z]+@[a-z]+\.[a-z]+" placeholder="mail@mail.com" required>
 			<input type="submit" value="Отправить">
 		</fieldset>	
 	</form>
@@ -30,4 +30,5 @@ input используется для создания полей формы, а
 pattern для проверки с помощью регулярных выражений. Квадратные скобки устанавливают диапазон допустимых символов, число в фигурных скобках указывает сколько таких символов может быть
 placeholder то что пишется серым в окне текста в качестве примера заполнения
 for определяет, к какому полю формы привязан данный элемент
+пол, возраст, категории рассылок, согласие на обработку данных
 -->
