Amendments to the lab3

--- a/lab2.html
+++ b/lab2.html
@@ -10,7 +10,7 @@
 		<h1>Подписаться на рассылку</h1>
 	</header>
 	
-	<form action="lab3.php" method="post" novalidate>
+	<form action="lab3.php" method="post" <!--novalidate-->>
 		<fieldset>
 			<legend><b>Контактная информация</b></legend>
 			<!--Имя может быть длиной от 2 до 15 символов, русскими буквами-->
