Amendments to the files and lab6

--- a/lab1.html
+++ b/lab1.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
-
-	<head>
-		<meta charset="utf-8">
+	<!--В HTML5 для структуры кода введено несколько новых тегов: <article>, <aside>, <footer>, <header>, <nav>-->
+	<head> 
+		<meta charset="utf-8"> <!--задает кодировку документа-->
 		<link href="myStyle.css" rel="stylesheet">
+		<!--rel - Определяет отношения между текущим документом и файлом, на который делается ссылка.
+		stylesheet - Определяет, что подключаемый файл хранит таблицу стилей (CSS).-->
 		<title>Лабораторная работа 1</title>		
 	</head>
 
-	<header>
+	<header> <!--Шапка сайта-->
 		<h1>Белые медведи</h1>
 	</header>
 	
@@ -21,19 +23,19 @@
 			<p>
 			1. Белый медведь — самый большой теплокровный хищник на планете. Вес белого медведя может достигать 1 000 кг, а длина 3 метров.
 			</p>
-				<h2><img src="pic1.jpg" width="500" height="350" alt="мишка1"></h2>
+				<img src="pic1.jpg" width="500" height="350" alt="мишка1">
 			<p>
 			2. Наиболее характерной особенностью белого медведя является абсолютно белый мех, однако он является не совсем тем, чем кажется. На самом деле, их волосяные фолликулы являются прозрачными полыми трубками. Благодаря этому их шерсть отражает окружающий их свет. 
 			</p>
-				<h2><img src="pic2.jpg" width="500" height="350" alt="мишка2"></h2>
+				<img src="pic2.jpg" width="500" height="350" alt="мишка2">
 			<p>
 			3. Если сфотографировать белого медведя на инфракрасную камеру, то на снимке будет видно только кончик носа и исходящий из него пар, а самого мишки видно не будет.
 			</p>
-				<h2><img src="pic3.jpg" width="500" height="350" alt="мишка3"></h2>
+				<img src="pic3.jpg" width="500" height="350" alt="мишка3">
 			<p>
 			4. Белые медведи превосходные пловцы. Чтобы хорошо плавать у медведей даже есть плавательные перепонки между пальцами. В воде они развивают скорость до 6,5 км/ч.
 			</p>
-				<h2><img src="pic4.jpg" width="350" height="500" alt="мишка4"></h2>
+				<img src="pic4.jpg" width="350" height="500" alt="мишка4">
 		</div>	
 		<button type="button">Подписаться</button>
 	</body>
