--- a/lab2.html
+++ b/lab2.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
+		<meta charset="utf-8"> <!--задает кодировку документа-->
 		<link href="myStyle.css" rel="stylesheet">
-		<title>Лабораторная работа 2</title>		
+		<!--rel - Определяет отношения между текущим документом и файлом, на который делается ссылка.
+		stylesheet - Определяет, что подключаемый файл хранит таблицу стилей (CSS).-->
+		<title>Lab2</title>		
 	</head>
 	
 	<header>
-		<h1>Подписаться на рассылку</h1>
+		<h1>Subscribe</h1>
 	</header>
 	
-	<?=$my_Form?> 
+	<?=$my_Form?>
 </html>
 
 <!--
 legend заголовок блока fieldset
-тэг <em> преобразует текст в курсивный
+тэг <em> преобразует текст в курсивный. Следует отметить, что теги <i> и <em>, несмотря на сходство результата, являются не совсем эквивалентными 
+	и заменяемыми. Первый тег <i> — является тегом физической разметки и устанавливает курсивный текст, а тег <em> — тегом логической разметки и 
+	определяет важность помеченного текста. Такое разделение тегов на логическое и физическое форматирование изначально предназначалось, чтобы сделать 
+	HTML универсальным, в том числе не зависящим от устройства вывода информации.
 label просто текст
 input используется для создания полей формы, а зависимости от типа
-pattern для проверки с помощью регулярных выражений. Квадратные скобки устанавливают диапазон допустимых символов, число в фигурных скобках указывает сколько таких символов может быть
+pattern для проверки с помощью регулярных выражений. Квадратные скобки устанавливают диапазон допустимых символов, число в фигурных скобках указывает 
+	сколько таких символов может быть
 placeholder то что пишется серым в окне текста в качестве примера заполнения
 for определяет, к какому полю формы привязан данный элемент
-пол, возраст, категории рассылок, согласие на обработку данных
+добавить: пол, возраст, согласие на обработку данных
 -->
